--- a/bawabati/frontend/public/index.html
+++ b/bawabati/frontend/public/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="Educational System - A comprehensive platform for managing educational resources"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <title>Educational System</title>
   </head>
   <body>
